상단 AppBar 추가 AppBar에 메뉴 버튼, 사용자 메뉴 버튼 추가 메뉴 버튼에 항목만 추가(기능 x) 사용자 메뉴 버튼에 항목 추가 - 여기에 로그아웃 버튼 적용 subtitle 사라지는 애니메이션 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
 
+    // Powermenu
+    implementation "com.github.skydoves:powermenu:2.1.2"
+
+    // Custom FloatingActionButton
+    implementation 'com.robertlevonyan.view:CustomFloatingActionButton:3.0.0'
+
 
     // Glide
 //    def glide_version = "4.8.0"
