--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.RegisterActivity"
-            android:theme="@style/popupTheme"/>
-        <activity android:name=".ui.LoginActivity">
-
-        </activity>
+        <activity android:name=".ui.PostActivity"></activity>
+        <activity
+            android:name=".ui.RegisterActivity"
+            android:theme="@style/popupTheme" />
+        <activity android:name=".ui.LoginActivity"></activity>
         <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
