--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,4 +86,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     kapt 'com.android.databinding:compiler:3.1.4'
+
+    // Paging
+    implementation 'android.arch.paging:runtime:1.0.1'
 }
