Coordinator Layout과 Collapsing Toolbar Layout을 적용하여 RecyclerView 를 스크롤 할 때 위 앱 바가 가려지도록 구현했다. 원래 Floating Action Button으로 구현해 놓은 기능이긴 했는데 Collapsing Toolbar가 의미적으로나 동작면에서나 더 나은 것 같아서.. PostActivity에서 텍스트를 입력하면 글자 limit이 바로 바뀌도록 구현, 올리기 버튼 누르면 모든 뷰 동작을 disable 하도록 하고 업로드 상태에 따라 로딩 화면이 갱신되도록 했다.-progressbar
포스트 할 때 중복된 날짜의 데이터 처리하는 것 구현해야 함.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,7 @@ dependencies {
 
     // Paging
     implementation 'android.arch.paging:runtime:1.0.1'
+
+    // Material Progressbar
+    implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
 }
